K8S/Deployment Strategy/Canary Deployment/canary-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: canary-ns
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
